--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <button id="divide">Divide</button>
         </div>
 </div>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
